[gd_scene load_steps=6 format=3 uid="uid://l8tckyk8y124"]

[ext_resource type="Script" uid="uid://chv04itcroap2" path="res://scripts/ui/victory_screen.gd" id="1_mtfol"]
[ext_resource type="Theme" uid="uid://brmsm8x6ntpna" path="res://theme/furnace_theme.tres" id="2_1x1dp"]
[ext_resource type="Texture2D" uid="uid://nxt4h0uecipk" path="res://resources/ui_assets/9p_small.png" id="3_ndp4s"]
[ext_resource type="PackedScene" uid="uid://q6vu7kf32cel" path="res://scenes/ui/stats_display.tscn" id="4_1x1dp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8uki6"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
texture = ExtResource("3_ndp4s")
texture_margin_left = 12.0
texture_margin_top = 12.0
texture_margin_right = 12.0
texture_margin_bottom = 12.0

[node name="VictoryScreen" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1_mtfol")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -108.0
offset_right = 108.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_1x1dp")
theme_override_styles/panel = SubResource("StyleBoxTexture_8uki6")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="PausedLabel" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 24
text = "LEVEL X
CLEARED"
horizontal_alignment = 1

[node name="StatsDisplay" parent="PanelContainer/VBoxContainer/VBoxContainer" instance=ExtResource("4_1x1dp")]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(140, 24)
layout_mode = 2
size_flags_horizontal = 4
text = "Continue"

[node name="ResumeButton2" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(140, 24)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Restart Level"
